Integrate LOG4J 2